v1.1.0: 依赖升级 + 虚拟线程超时控制 + 代码质量改进
- 版本: 1.0.0 → 1.1.0-SNAPSHOT
- 依赖升级: Jackson 2.18.3, JLine 3.27.1, SLF4J 2.0.17, JUnit 5.11.4
- 构建: 新增 maven-surefire-plugin 3.5.2 + maven-enforcer-plugin 3.5.0
- ToolRegistry: Virtual threads 执行 + 超时控制
- BashTool: 使用 virtual threads + 改进超时 + try-with-resources
- AnthropicProvider: 消除重复代码 + 流超时 + 异常处理改进
- Tool 接口: 新增 timeout() 方法